# 2022-polytech-gaifullin

./: README.md
02_compiler/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ProjectName.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  func.cpp  func.vcxproj  func.vcxproj.filters  hello_world.cpp  hello_world.s  hello_world.sln  hello_world.vcxproj  hello_world.vcxproj.filters
02_compiler/complex/: README.md
03_cpp/calculator/: calculator.cpp
03_cpp/gcd/: evklid.cpp
03_cpp/intro/: hello.cpp
